# ScholarX

./: README.md  app.py  data_drift.py  data_drift_report.html  depression_model.ipynb  depression_model.pkl  pyproject.toml  split_dataset.py  test.csv  train.csv  validate.py
